[gd_scene load_steps=11 format=3 uid="uid://k83mr0lct4rk"]

[ext_resource type="Script" path="res://Scripts/Items/Weapons/WeaponBehavior.gd" id="1_0ffcn"]
[ext_resource type="Script" path="res://Scripts/Items/Weapons/WeaponsCollision.gd" id="1_f66n7"]
[ext_resource type="Script" path="res://Scripts/Items/Weapons/CollisionModifier.gd" id="2_22q47"]
[ext_resource type="Texture2D" uid="uid://dko17qdq8l03s" path="res://Assets/Weapons/Kopesh/AttackSwooshBis1.png" id="3_2ygiq"]
[ext_resource type="Texture2D" uid="uid://bw3p821jlk6j8" path="res://Assets/Weapons/Kopesh/AttackSwooshBis2.png" id="4_e3cf0"]
[ext_resource type="Script" path="res://Scripts/Items/Weapons/WeaponTimer.gd" id="5_63bj5"]
[ext_resource type="Texture2D" uid="uid://bybjvjkog2knh" path="res://Assets/Weapons/Kopesh/AttackSwooshBis3.png" id="5_l5gej"]
[ext_resource type="Script" path="res://Scripts/Items/Weapons/WeaponAnimation.gd" id="6_jkap5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_u4h3m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2ygiq")
}, {
"duration": 1.0,
"texture": ExtResource("5_l5gej")
}, {
"duration": 1.0,
"texture": ExtResource("4_e3cf0")
}],
"loop": false,
"name": &"attack",
"speed": 60.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_faxja"]
size = Vector2(97, 20)

[node name="Kopesh" type="Node2D" node_paths=PackedStringArray("sprite", "collider", "weapon_area", "weapon_timer")]
script = ExtResource("1_0ffcn")
sprite = NodePath("WeaponBody/AnimatedSprite2D")
collider = NodePath("WeaponBody/CollisionShape2D")
weapon_area = NodePath("WeaponBody")
weapon_timer = NodePath("Timer")

[node name="WeaponBody" type="Area2D" parent="." node_paths=PackedStringArray("collider")]
collision_layer = 8
collision_mask = 2
priority = 1
script = ExtResource("1_f66n7")
collider = NodePath("CollisionShape2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="WeaponBody" node_paths=PackedStringArray("weapon_timer")]
position = Vector2(-0.499999, 0)
scale = Vector2(1.51563, 1)
sprite_frames = SubResource("SpriteFrames_u4h3m")
animation = &"attack"
frame = 2
frame_progress = 1.0
script = ExtResource("6_jkap5")
weapon_timer = NodePath("../../Timer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponBody"]
visible = false
shape = SubResource("RectangleShape2D_faxja")
debug_color = Color(0.996078, 0, 0.180392, 0.32549)
script = ExtResource("2_22q47")

[node name="Timer" type="Timer" parent="."]
one_shot = true
script = ExtResource("5_63bj5")

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="draw" from="." to="WeaponBody/AnimatedSprite2D" method="_on_kopesh_draw"]
[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
